Añadido busqueda por filtros en JS

--- a/index.html
+++ b/index.html
@@ -24,27 +24,21 @@
 
             <div class="col s12">
                 <label>Filtrar por:</label>
-                <select id="filtro">
-                    <option value="" disabled selected>Selecciona una opción</option>
-                    <option value="categoria">Categoría</option>
-                    <option value="marca">Marca</option>
-                    <option value="departamento">Departamento</option>
-                </select>
             </div>
-            <div id="categorias" class="col s12 oculto">
+            <div id="categorias" class="col s12 m4">
                 <label>Tipo o Categoría</label>
                 <select id="opciones-categoria">
                     <option value="" disabled selected>Selecciona una opción</option>
                     
                 </select>
             </div>
-            <div id="marcas" class="col s12 oculto">
+            <div id="marcas" class="col s12 m4">
                 <label>Marca</label>
                 <select id="opciones-marca">
                     <option value="" disabled selected>Selecciona una opción</option>
                 </select>
             </div>
-            <div id="departamentos" class="col s12 oculto">
+            <div id="departamentos" class="col s12 m4">
                 <label>Area o Departamento</label>
                 <select id="opciones-departamento">
                     <option value="" disabled selected>Selecciona una opción</option>
