--- a/lista.html
+++ b/lista.html
@@ -7,21 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="src/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
     <title>Buscador de Activos TIC</title>
 </head>
 
 <body>
-
     <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Buscador Activos TIC</a>
+        <div class="nav-wrapper orange darken-3">
+            <a href="index.html" class="brand-logo">Activos TIC</a>
         </div>
     </nav>
     <!-- Page Layout here -->
 
     <div class="row container">
-        <div class="col s12 filtros">
+        <div class="col s12 filtros">          
 
             <div class="col s12">
                 <label>Filtrar por:</label>
@@ -29,8 +28,8 @@
             <div id="categorias" class="col s12 m4">
                 <label>Tipo o Categoría</label>
                 <select id="opciones-categoria">
-                    <option value="" disabled selected>Selecciona una opción</option>
-                    <option value="">Todos</option>
+                    <option value="" disabled selected>Selecciona una opción</option>     
+                    <option value="">Todos</option>               
                 </select>
             </div>
             <div id="marcas" class="col s12 m4">
@@ -48,15 +47,12 @@
                 </select>
             </div>
             <div class="col s12">
-                <input id="borrarFiltro" class="boton borrarFiltro col s12 m3" type="button" value="Borrar Filtros">
-                <input id="mosaico" class="boton vista" type="button" value="Vista Mosaico">
-                <input id="lista" class="boton vista" type="button" value="Vista Lista">
+                <input id="borrarFiltro" class="boton borrarFiltro" type="button" value="Borrar Filtros">
             </div>
 
         </div>
 
         <div class="lista-equipos">
-
 
         </div>
     </div>
@@ -64,7 +60,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="src/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
