--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 
     <nav>
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Buscador Activos TIC</a>
+            <p class="brand-logo">Buscador de Activos TIC</p>
         </div>
-    </nav>
+    </nav>   
     <!-- Page Layout here -->
 
     <div class="row container">
         <div class="col s12 filtros">
-
             <div class="col s12">
                 <label>Filtrar por:</label>
             </div>
